--- a/_layouts/check.html
+++ b/_layouts/check.html
@@ -2,10 +2,10 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title>Parameter Check</title>
+    <title>{{ page.title }}</title>
 </head>
 <body>
-  <h1>Jekylly Parameter</h1>
+  <h1>{{ page.title }}</h1>
   <dl>
     <dt> site.url
     <dd> {{ site.url }}
