--- a/_layouts/check.html
+++ b/_layouts/check.html
@@ -14,6 +14,8 @@
     <dd> {{ page.url }}
     <dt> page.path
     <dd> {{ page.path }}
+    <dt> site.github.url
+    <dd> {{ site.github.url }}
   </dl>
   <h2>JavaScript</h2>
   <dl id="js-param"></dl>
